WT-13700: Extract template-formatter and openapi generator to subprojects
 - The :autogen subproject contains the dependencies and configuration
   for generating the models from the connect-api-spec OpenAPI spec.

 - All template-related classes (and dependencies) have been moved to
   the :template-formatter subproject.

--- a/gradle/conf/jacoco.gradle
+++ b/gradle/conf/jacoco.gradle
@@ -8,7 +8,8 @@ ext {
         '**/generated/**',
         'io/wisetime/connector/adjunct_keywords/*',
         'io/wisetime/connector/api_client/SyncScope*',
-        'io/wisetime/connector/api_client/support/*'
+        'io/wisetime/connector/api_client/support/*',
+        'io/wisetime/connector/template/*'
     ]
 }
 
