--- a/.drone.yml
+++ b/.drone.yml
@@ -16,7 +16,7 @@ steps:
       mount:
         - .gcache/wrapper
         - .gcache/caches/modules-2
-      cache_key: [ DRONE_REPO_OWNER, DRONE_REPO_NAME, DRONE_BRANCH ]
+      cache_key: [ DRONE_REPO_OWNER, DRONE_REPO_NAME ]
     volumes:
       - name: host-cache
         path: /cache
@@ -52,7 +52,7 @@ steps:
       mount:
         - .gcache/wrapper
         - .gcache/caches/modules-2
-      cache_key: [ DRONE_REPO_OWNER, DRONE_REPO_NAME, DRONE_BRANCH ]
+      cache_key: [ DRONE_REPO_OWNER, DRONE_REPO_NAME ]
     volumes:
       - name: host-cache
         path: /cache
