DEVOPS-400 updated repo name

--- a/bamboo-specs/bamboo.yaml
+++ b/bamboo-specs/bamboo.yaml
@@ -14,7 +14,7 @@ save source artifact:
   key: SSA
   tasks:
     - checkout:
-        repository: wisetime-connector-java-stash
+        repository: wisetime-connector-java
         path: wisetime-connector-java
         force-clean-build: 'false'
     - script:
